# transformer-sandbox

./: .gitignore  README.md  autoregressive.csv  pyproject.toml
transfer-classifier/: finetune.py  test.csv
transfer-classifier/tests/: test_transfer.py
transfer_classifier/: amazon_review.py  augment_classifier.ipynb  augmentation.py  augmented_dataset.py  augmentor.py  autoencoder_augmentor.py  classification_dataset_preprocessor.py  evaluator.py  experiment.py  finetune.py  finetune_classification.ipynb  finetune_classifier.ipynb  train.csv
transfer_classifier/augmentor/: __init__.py  augmented_dataset.py  augmentor.py  autoencoder_augmentor.py  autoregressive_augmentor.py
transfer_classifier/dataset_preprocessor/: __init__.py  amazon_review.py  classification_dataset_preprocessor.py  livedoor.py
transfer_classifier/datasets/: amazon_review.py
transfer_classifier/tests/: test.csv  test_amazon_review.py  test_augmented_dataset.py  test_augmentor.py  test_autoencoder_augmentor.py  test_autoregressive_augmentor.py  test_livedoor.py  test_transfer.py
